; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_hbffmpeg.c_handle_jpeg.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_hbffmpeg.c_handle_jpeg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_PIX_FMT_YUV420P = common dso_local global i32 0, align 4
@AV_PIX_FMT_YUV422P = common dso_local global i32 0, align 4
@AV_PIX_FMT_YUV444P = common dso_local global i32 0, align 4
@AV_PIX_FMT_YUV440P = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @handle_jpeg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_jpeg(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %18 [
    i32 131, label %6
    i32 130, label %9
    i32 128, label %12
    i32 129, label %15
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @AV_PIX_FMT_YUV420P, align 4
  %8 = load i32*, i32** %3, align 8
  store i32 %7, i32* %8, align 4
  store i32 1, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @AV_PIX_FMT_YUV422P, align 4
  %11 = load i32*, i32** %3, align 8
  store i32 %10, i32* %11, align 4
  store i32 1, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load i32, i32* @AV_PIX_FMT_YUV444P, align 4
  %14 = load i32*, i32** %3, align 8
  store i32 %13, i32* %14, align 4
  store i32 1, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @AV_PIX_FMT_YUV440P, align 4
  %17 = load i32*, i32** %3, align 8
  store i32 %16, i32* %17, align 4
  store i32 1, i32* %2, align 4
  br label %19

18:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %15, %12, %9, %6
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
